--- a/DoneTool/wwwroot/css/taskLayout.css
+++ b/DoneTool/wwwroot/css/taskLayout.css
@@ -52,6 +52,7 @@
 .task-checklist table {
     width: 100%;
     border-collapse: collapse;
+    table-layout: fixed;
 }
 
 .task-checklist tbody tr:nth-child(odd) {
@@ -68,8 +69,30 @@
     text-align: center;
 }
 
-.task-checklist td:nth-child(2) {
-    width: 11%;
+.task-checklist td:nth-child(1) {
+    padding-left: 5px;
+    text-align: left;
+    min-width: 350px;
+    max-width: 500px;
+    width: 40%;
+}
+
+.task-checklist td:nth-child(2) { 
+    min-width: 50px;
+    max-width: 100px;
+    width: 10%; 
+}
+
+.task-checklist td:nth-child(3) {
+    min-width: 50px;
+    max-width: 100px;
+    width: 10%; 
+}
+
+.task-checklist td:nth-child(4) { 
+    min-width: 350px;
+    max-width: 500px;
+    width: 40%;
 }
 
 .task-checklist th {
@@ -83,14 +106,17 @@
     border: 1px solid #ccc;
     box-sizing: border-box;
     resize: none;
-    min-height: 10px;
-    overflow-y: hidden;
+    overflow-y: auto;
     border-radius: 5px;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
     transition: border-color 0.3s, box-shadow 0.3s;
+    min-height: 80px;
 }
 
 select.form-control {
+    appearance: none;
+    background-color: #fff;
+    cursor: pointer;
     text-align: center;
 }
 
@@ -100,36 +126,55 @@ select.form-control {
     outline: none;
 }
 
-select.form-control {
-    appearance: none;
-    background-color: #fff;
-    cursor: pointer;
-}
-
-.char-count {
-    font-size: 0.8em;
-    font-weight: bold;
-    margin-top: 2px;
-}
-
 .custom-dropdown {
-    font-size: 0.8em;
     position: relative;
     display: inline-block;
-    width: 80%;
+    width: 100%;
 }
 
-.dropdown-toggle {
-    width: 100%;
-    background-color: white;
-    border: 1px solid #ccc;
+.status-button-wrapper {
+    display: flex;
+    align-items: center;
+}
+
+.status-button, .arrow-button {
     padding: 8px;
+    border: 1px solid #ccc;
     cursor: pointer;
-    border-radius: 5px;
     text-align: center;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
+    color: white;
+    border-radius: 5px;
+}
+
+.status-button {
+    flex: 1;
+    border-right: none;
+    border-radius: 5px 0 0 5px;
+}
+
+.arrow-button {
+    width: 30px;
+    margin-left: -5px;
+    border-left: none;
+    border-radius: 0 5px 5px 0;
+}
+
+.status-todo, .status-button.status-todo, .arrow-button.status-todo {
+    background-color: #083d77;
+}
+
+.status-done, .status-button.status-done, .arrow-button.status-done {
+    background-color: #0cce6b;
+}
+
+.status-skipped, .status-button.status-skipped, .arrow-button.status-skipped {
+    background-color: #ed7d3a;
+}
+
+.dropdown-arrow {
+    font-size: 12px;
+    display: inline-block;
+    width: 100%;
 }
 
 .dropdown-menu {
@@ -154,17 +199,123 @@ select.form-control {
     background-color: #f1f1f1;
 }
 
-.status-done {
-    background-color: #0cce6b !important;
-    color: white;
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.4);
+    padding-top: 60px;
 }
 
-.status-todo {
-    background-color: #083d77 !important;
-    color: white;
+.modal-content {
+    background-color: #fefefe;
+    margin: 5% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    max-width: 500px;
+    text-align: center;
 }
 
-.status-skipped {
-    background-color: #ed7d3a !important;
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.custom-reload-modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4);
+    padding-top: 60px;
+}
+
+.custom-reload-modal-content {
+    background-color: #fefefe;
+    margin: 5% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    text-align: center;
+}
+
+#customReloadButton {
+    background-color: #4CAF50;
     color: white;
+    padding: 10px 20px;
+    border: none;
+    cursor: pointer;
+    font-size: 16px;
+}
+
+#customReloadButton:hover {
+    background-color: #45a049;
+}
+
+
+@media screen and (max-width: 768px) {
+    .task-checklist th, .task-checklist td {
+        font-size: 12px;
+    }
+
+    .task-checklist td:nth-child(1) {
+        min-width: 150px;
+        max-width: 250px;
+    }
+
+    .task-checklist td:nth-child(2) { 
+        min-width: 80px;
+        max-width: 120px;
+    }
+
+    .task-checklist td:nth-child(3) { 
+        min-width: 100px;
+        max-width: 120px;
+    }
+
+    .task-checklist td:nth-child(4) { 
+        min-width: 200px;
+        max-width: 300px;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .task-checklist {
+        font-size: 10px;
+    }
+
+    .task-checklist th, .task-checklist td {
+        padding: 5px;
+    }
+
+    .status-button-wrapper {
+        flex-direction: column; 
+    }
+
+    .status-button, .arrow-button {
+        width: 100%;
+        margin-left: 0;
+        margin-bottom: 5px; 
+        border-radius: 5px; 
+    }
 }
