Set task title and assignee dynamically, and limit guards to only PO and CO for now

--- a/DoneTool/Views/Home/Index.cshtml
+++ b/DoneTool/Views/Home/Index.cshtml
@@ -48,7 +48,7 @@
                             <option value="">Select Guard</option>
                             @foreach (var guard in Model.Guards)
                             {
-                                <option value="@guard.Name">@guard.Name</option>
+                                <option value="@guard">@guard</option>
                             }
                         </select>
                     </td>
