--- a/DoneTool/wwwroot/css/taskLayout.css
+++ b/DoneTool/wwwroot/css/taskLayout.css
@@ -207,12 +207,10 @@ select.form-control {
     color: #ed7d3a;
 }
 
-
 .arrow-button.status-skipped {
     background-color: #ed7d3a;
     color: white;
 }
-
 
 .status-todo {
     color: #083d77;
@@ -252,6 +250,10 @@ select.form-control {
 }
 
 .modal-content {
+    display: flex;
+    z-index: 1000;
+    flex-direction: column;
+    align-items: center;
     background-color: #fefefe;
     margin: 5% auto;
     padding: 20px;
@@ -259,13 +261,8 @@ select.form-control {
     width: 80%;
     max-width: 500px;
     text-align: center;
-}
-
-.modal-content {
-    display: flex;
-    z-index:1000;
-    flex-direction: column;
-    align-items: center;
+    box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.3); 
+    border-radius: 10px; 
 }
 
 .close {
@@ -284,6 +281,58 @@ select.form-control {
     color: black;
     text-decoration: none;
     cursor: pointer;
+}
+
+#skipComment {
+    width: 100%;
+    padding: 10px;
+    border-radius: 6px;
+    border: 1px solid #ccc;
+    margin-bottom: 15px;
+    font-size: 16px;
+    transition: border-color 0.3s ease;
+    background-color: #f5f5f5;
+}
+
+#skipComment:focus {
+    border-color: #007bff;
+    background-color: #fff;
+    outline: none;
+}
+
+#commonReasonsDropdown {
+    width: 100%;
+    padding: 10px;
+    border-radius: 6px;
+    border: 1px solid #ccc;
+    background-color: #f5f5f5;
+    font-size: 16px;
+    color: #555;
+    margin-bottom: 15px;
+    transition: border-color 0.3s ease, background-color 0.3s ease;
+}
+
+#commonReasonsDropdown:focus {
+    border-color: #007bff;
+    background-color: #fff;
+    outline: none;
+}
+
+#commonReasonsDropdown option {
+    padding: 10px;
+    font-size: 16px;
+}
+
+#commonReasonsDropdown option:hover {
+    background-color: #e9ecef;
+    color: #0056b3;
+    font-weight: bold;
+}
+
+#commonReasonsDropdown option::before {
+    content: "✔️ "; 
+    font-size: 14px;
+    margin-right: 5px;
 }
 
 .custom-reload-modal {
