Add button for sending to CR

--- a/DoneTool/Views/Home/Index.cshtml
+++ b/DoneTool/Views/Home/Index.cshtml
@@ -78,6 +78,9 @@
         </tbody>
     </table>
 </div>
+<div class="send-cr-button-wrapper">
+    <button class="send-cr-button">Send to CR</button>
+</div>
 
 <div id="commentModal" class="modal">
     <div class="modal-content">
