--- a/DoneTool/wwwroot/css/taskLayout.css
+++ b/DoneTool/wwwroot/css/taskLayout.css
@@ -478,9 +478,9 @@ select.form-control {
     border-bottom: 1px solid #eee;
 }
 
-    .guard-option:hover {
-        background-color: #f0f0f0;
-    }
+.guard-option:hover {
+    background-color: #f0f0f0;
+}
 
 .dropdown-section {
     padding: 8px 12px;
@@ -488,4 +488,29 @@ select.form-control {
     color: #555;
     background-color: #f8f8f8;
     border-bottom: 1px solid #ddd;
+}
+
+.send-cr-button-wrapper {
+    width: 80%;
+    margin: 20px auto 0 auto;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.send-cr-button {
+    padding: 10px 20px;
+    background-color: #b9d8ee;
+    color: #18244c;
+    border: none;
+    cursor: pointer;
+    font-size: 16px;
+    font-weight: bold;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+}
+
+.send-cr-button:hover {
+    background-color: #18244c;
+    color: white;
+    font-weight: bold;
 }
