--- a/DoneTool/wwwroot/css/taskLayout.css
+++ b/DoneTool/wwwroot/css/taskLayout.css
@@ -99,6 +99,33 @@
     background-color: #f2f2f2;
 }
 
+.clickable-cell {
+    padding: 0; 
+}
+
+.full-cell-link {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    height: 100%;
+    text-decoration: none;
+    color: inherit;
+    padding: 8px;
+    box-sizing: border-box;
+}
+
+.full-cell-link:hover {
+    background-color: rgba(0, 0, 0, 0.05); 
+}
+
+.clickable-icon {
+    margin-left: 8px;
+    width: 16px;
+    height: 16px;
+    cursor: pointer;
+}
+
 .form-control {
     width: 100%;
     padding: 8px;
@@ -106,11 +133,12 @@
     border: 1px solid #ccc;
     box-sizing: border-box;
     resize: none;
-    overflow-y: auto;
+    max-height: 200px;
+    overflow-y: hidden;
     border-radius: 5px;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
     transition: border-color 0.3s, box-shadow 0.3s;
-    height: 80px;
+    height : 41.6px;
 }
 
 select.form-control {
@@ -454,6 +482,7 @@ select.form-control {
 }
 
 .guard-dropdown-menu {
+    text-align: left;
     display: none;
     position: absolute;
     background-color: #fff;
@@ -464,8 +493,8 @@ select.form-control {
     list-style: none;
     width: 100%;
     z-index: 1000;
-    max-height: 170px; 
-    overflow-y: auto; 
+    max-height: 250px;
+    overflow-y: auto;
 }
 
 .guard-dropdown-menu.show {
@@ -514,3 +543,18 @@ select.form-control {
     color: white;
     font-weight: bold;
 }
+
+.highlight {
+    background-color: yellow;
+    font-weight: bold;
+}
+
+.btn-center {
+    display: block;
+    margin: 10px auto; /* Centriranje dugmeta */
+}
+
+.clickable-cell {
+    vertical-align: top;
+}
+
